--- a/css/media.css
+++ b/css/media.css
@@ -3,10 +3,16 @@
         font-size: 46px;
         line-height: 64px;
     }
+
 }
 
 
 @media screen and (max-width:1280px) {
+    .header__title {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
     .about__grid {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
