--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,12 @@ body {
     color: var(--white-color);
 }
 
+@media screen and (max-width: 380px) {
+    .h1 {
+        font-size: 46px;
+        line-height: 64px;
+    }
+}
 
 .h4 {
     margin: 10px auto;
@@ -200,6 +206,28 @@ body {
     font-size: 18px;
 }
 
+@media screen and (max-width:1280px) {
+    .about__grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+
+    }
+
+}
+
+@media screen and (max-width:768px) {
+    .info {
+        position: relative;
+        padding: 30px 0;
+    }
+
+    .about__grid {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+
+    }
+
+}
 
 .project-h2 {
     text-align: center;
@@ -238,6 +266,35 @@ body {
 
 .project-p {
     color: var(--gray-color);
+}
+
+
+@media screen and (max-width:1280px) {
+    .about {
+        padding: 450px 15px 110px 15px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .about {
+        padding-top: 150px;
+        padding-bottom: 80px;
+    }
+
+    .about__flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .about__flex-item {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+
+    .about__flex-item:last-child {
+        margin-bottom: 0;
+    }
+
 }
 
 .request {
@@ -291,6 +348,18 @@ body {
     margin-right: 15px;
 }
 
+@media screen and (max-width:1280px) {
+    .request {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .request__flex {
+        flex-wrap: wrap;
+    }
+}
 
 .services {
     padding: 150px 0;
@@ -331,6 +400,28 @@ body {
     margin: 0 auto 21px;
 }
 
+@media screen and (max-width:1280px) {
+    .services {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .services__grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .services__grid-item {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .services__grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
 .portfolio__grid {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -341,6 +432,18 @@ body {
 .portfolio__img {
     max-width: 375px;
     height: 271px;
+}
+
+@media screen and (max-width:1280px) {
+    .portfolio__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width:768px) {
+    .portfolio__grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
 .question {
@@ -365,7 +468,7 @@ body {
     max-width: 730px;
 }
 
-.question__h3.close {
+/* .question__h3.close {
     margin-bottom: 33px;
 }
 
@@ -379,14 +482,20 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     margin-right: 15px;
-}
+} */
 
-.question__h3.open::before {
+/* .question__h3.open::before {
     transform: rotate(90deg);
-}
+}  */
 
-.question__h3.close+.question__p {
+/* .question__h3.close+.question__p {
     display: none;
+} */
+
+@media screen and (max-width:1280px) {
+    .question {
+        padding: 150px 15px 110px;
+    }
 }
 
 .partners {
@@ -394,6 +503,8 @@ body {
     padding-bottom: 80px;
     background-color: var(--dark-color);
 }
+
+/* .h2 {} */
 
 .partners__h2 {
     color: var(--white-color);
@@ -415,6 +526,22 @@ body {
 
 .partners__item:nth-child(5n) {
     margin-right: 0;
+}
+
+@media screen and (max-width:1280px) {
+    .partners__flex {
+        justify-content: center;
+    }
+
+    .partners__item {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
+
+    .partners__item:nth-child(5n) {
+        margin-right: 10px;
+        margin-left: 10px;
+    }
 }
 
 .reviews {
@@ -452,6 +579,25 @@ body {
     color: var(--accent-color);
 }
 
+@media screen and (max-width:1280px) {
+    .reviews {
+        padding: 100px 15px;
+    }
+
+    .reviews__grid {
+        display: grid;
+        gap: 30px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width:768px) {
+    .reviews__grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
+
 .contacts {
     padding: 100px 0 150px;
 }
@@ -481,6 +627,10 @@ body {
 .contacts__h3 {
     text-transform: uppercase;
 }
+.contacts__h3 a {
+    text-decoration: none;
+    color: inherit;
+}
 
 .contacts-gray {
     color: var(--gray-color);
@@ -489,6 +639,26 @@ body {
 
 .contacts__h3-accent {
     color: var(--accent-color);
+}
+
+@media screen and (max-width:1280px) {
+    .contacts__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contacts__icon {
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .contacts__grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .contacts__icon {
+        max-width: 100%;
+    }
 }
 
 .footer {
@@ -500,4 +670,16 @@ body {
 .footer__flex {
     display: flex;
     justify-content: space-between;
+}
+
+@media screen and (max-width:1280px) {
+    .footer {
+        padding: 30px 15px;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .footer__flex {
+        flex-direction: column;
+    }
 }
