--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@ body {
     color: var(--white-color);
 }
 
+
 .h4 {
     margin: 10px auto;
     font-weight: 400;
@@ -173,7 +174,6 @@ body {
 }
 
 .about__grid-item {
-    /* background-color: #ddd; */
     text-align: center;
     width: 190px;
 }
@@ -198,6 +198,7 @@ body {
     font-weight: 500;
     font-size: 18px;
 }
+
 
 .project-h2 {
     text-align: center;
@@ -272,8 +273,6 @@ body {
 }
 
 .request__btn {
-    text-decoration: none;
-    color: #000;
     margin-top: 20px;
     border: none;
     border-color: #FFFFFF;
@@ -290,6 +289,7 @@ body {
 .request__icon {
     margin-right: 15px;
 }
+
 
 .services {
     padding: 150px 0;
@@ -364,7 +364,7 @@ body {
     max-width: 730px;
 }
 
-/* .question__h3.close {
+.question__h3.close {
     margin-bottom: 33px;
 }
 
@@ -378,15 +378,15 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     margin-right: 15px;
-} */
+}
 
-/* .question__h3.open::before {
+.question__h3.open::before {
     transform: rotate(90deg);
-}  */
+}
 
-/* .question__h3.close+.question__p {
+.question__h3.close+.question__p {
     display: none;
-} */
+}
 
 .partners {
     padding-top: 100px;
@@ -430,6 +430,8 @@ body {
     gap: 30px;
     grid-template-columns: repeat(3, 1fr);
 }
+
+/* .reviews__grid-item {} */
 
 .reviews__card {
     background-color: #f7f7f7;
@@ -479,11 +481,6 @@ body {
     text-transform: uppercase;
 }
 
-.contacts__h3 a {
-    text-decoration: none;
-    color: inherit;
-}
-
 .contacts-gray {
     color: var(--gray-color);
     margin-bottom: 25px;
@@ -503,672 +500,3 @@ body {
     display: flex;
     justify-content: space-between;
 }
-
-/*  media */
-
-@media screen and (max-width: 380px) {
-    .h1 {
-        font-size: 46px;
-        line-height: 64px;
-    }
-
-}
-
-
-@media screen and (max-width:1280px) {
-    .header__title {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .about__grid {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
-}
-
-@media screen and (max-width:768px) {
-    .info {
-        position: relative;
-        padding: 30px 0;
-    }
-
-    .about__grid {
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .about {
-        padding: 450px 15px 110px 15px;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .about {
-        padding-top: 150px;
-        padding-bottom: 80px;
-    }
-
-    .about__flex {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .about__flex-item {
-        margin-right: 0;
-        margin-bottom: 30px;
-    }
-
-    .about__flex-item:last-child {
-        margin-bottom: 0;
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .request {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .request__flex {
-        flex-wrap: wrap;
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .services {
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-
-    .services__grid {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-    }
-
-    .services__grid-item {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .services__grid {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .portfolio__grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media screen and (max-width:768px) {
-    .portfolio__grid {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .question {
-        padding: 150px 15px 110px;
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .partners__flex {
-        justify-content: center;
-    }
-
-    .partners__item {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-
-    .partners__item:nth-child(5n) {
-        margin-right: 10px;
-        margin-left: 10px;
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .reviews {
-        padding: 100px 15px;
-    }
-
-    .reviews__grid {
-        display: grid;
-        gap: 30px;
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media screen and (max-width:768px) {
-    .reviews__grid {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .contacts__grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .contacts__icon {
-        max-width: 100%;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .contacts__grid {
-        grid-template-columns: repeat(1, 1fr);
-    }
-
-    .contacts__icon {
-        max-width: 100%;
-    }
-}
-
-@media screen and (max-width:1280px) {
-    .footer {
-        padding: 30px 15px;
-    }
-}
-
-@media only screen and (max-width: 992px) {
-    .sidenav.sidenav-fixed {
-        -webkit-transform: translateX(-105%);
-        transform: translateX(-105%);
-    }
-
-    .sidenav.sidenav-fixed.right-aligned {
-        -webkit-transform: translateX(105%);
-        transform: translateX(105%);
-    }
-
-    .sidenav>a {
-        padding: 0 16px;
-    }
-
-    .sidenav .user-view {
-        padding: 16px 16px 0;
-    }
-}
-
-@media screen and (max-width:768px) {
-    .footer__flex {
-        flex-direction: column;
-    }
-}
-
-/*  */
-
-ul#slide-out:not(.browser-default) {
-    padding-left: 0;
-    list-style-type: none;
-}
-
-ul#slide-out:not(.browser-default)>li {
-    list-style-type: none;
-}
-
-#slide-out a {
-    text-decoration: none;
-    -webkit-tap-highlight-color: transparent;
-}
-
-/* .breadcrumb i,
-.breadcrumb [class^="mdi-"], .breadcrumb [class*="mdi-"],
-.breadcrumb i.material-icons {
-  display: inline-block;
-  /* float: left; */
-/* font-size: 24px; */
-/* } */
-*/ .material-icons {
-    text-rendering: optimizeLegibility;
-    -webkit-font-feature-settings: 'liga';
-    -moz-font-feature-settings: 'liga';
-    font-feature-settings: 'liga';
-}
-
-/* 
-  nav i,
-nav [class^="mdi-"], nav [class*="mdi-"],
-nav i.material-icons {
-  display: block;
-  font-size: 24px;
-  height: 56px;
-  line-height: 56px;
-}
-
-nav .brand-logo i,
-nav .brand-logo [class^="mdi-"], nav .brand-logo [class*="mdi-"],
-nav .brand-logo i.material-icons {
-  float: left;
-  margin-right: 15px;
-}
-
-nav ul a.btn > .material-icons, nav ul a.btn-large > .material-icons, nav ul a.btn-small > .material-icons, nav ul a.btn-large > .material-icons, nav ul a.btn-flat > .material-icons, nav ul a.btn-floating > .material-icons {
-    height: inherit;
-    line-height: inherit;
-  } */
-
-
-/* .input-field input[type=search]:focus:not(.browser-default) + label i,
-.input-field input[type=search]:focus:not(.browser-default) ~ .mdi-navigation-close,
-.input-field input[type=search]:focus:not(.browser-default) ~ .material-icons {
-  color: #444;
-} */
-
-/* .input-field input[type=search] ~ .mdi-navigation-close,
-.input-field input[type=search] ~ .material-icons {
-  position: absolute;
-  top: 0;
-  right: 1rem;
-  color: transparent;
-  cursor: pointer;
-  font-size: 2rem;
-  -webkit-transition: .3s color;
-  transition: .3s color;
-} */
-
-/* .sidenav li > a > i,
-.sidenav li > a > [class^="mdi-"], .sidenav li > a li > a > [class*="mdi-"],
-.sidenav li > a > i.material-icons {
-  float: left;
-  height: 48px;
-  line-height: 48px;
-  margin: 0 32px 0 0;
-  width: 24px;
-  color: rgba(0, 0, 0, 0.54);
-} */
-
-
-
-.divider {
-    height: 1px;
-    overflow: hidden;
-    background-color: #e0e0e0;
-}
-
-.dropdown-content li.divider {
-    min-height: 0;
-    height: 1px;
-}
-
-/* 2dp elevation modified*/
-.z-depth-1,
-nav,
-.card-panel,
-.card,
-.toast,
-.btn,
-.btn-large,
-.btn-small,
-.btn-floating,
-.dropdown-content,
-.collapsible,
-.sidenav {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-}
-
-.sidenav span.badge {
-    margin-top: calc(24px - 11px);
-}
-
-.sidenav .collapsible,
-.sidenav.fixed .collapsible {
-    border: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-}
-
-.sidenav .collapsible li,
-.sidenav.fixed .collapsible li {
-    padding: 0;
-}
-
-.sidenav .collapsible-header,
-.sidenav.fixed .collapsible-header {
-    background-color: transparent;
-    border: none;
-    line-height: inherit;
-    height: inherit;
-    padding: 0 16px;
-}
-
-.sidenav .collapsible-header:hover,
-.sidenav.fixed .collapsible-header:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.sidenav .collapsible-header i,
-.sidenav.fixed .collapsible-header i {
-    line-height: inherit;
-}
-
-.sidenav .collapsible-body,
-.sidenav.fixed .collapsible-body {
-    border: 0;
-    background-color: #fff;
-}
-
-.sidenav .collapsible-body li a,
-.sidenav.fixed .collapsible-body li a {
-    padding: 0 23.5px 0 31px;
-}
-
-.sidenav {
-    position: fixed;
-    width: 300px;
-    left: 0;
-    top: 0;
-    margin: 0;
-    -webkit-transform: translateX(-100%);
-    transform: translateX(-100%);
-    height: 100%;
-    height: calc(100% + 60px);
-    height: -moz-calc(100%);
-    padding-bottom: 60px;
-    background-color: #fff;
-    z-index: 999;
-    overflow-y: auto;
-    will-change: transform;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateX(-105%);
-    transform: translateX(-105%);
-}
-
-.sidenav.right-aligned {
-    right: 0;
-    -webkit-transform: translateX(105%);
-    transform: translateX(105%);
-    left: auto;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
-}
-
-.sidenav .collapsible {
-    margin: 0;
-}
-
-.sidenav li {
-    float: none;
-    line-height: 48px;
-}
-
-.sidenav li.active {
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.sidenav li>a {
-    color: rgba(0, 0, 0, 0.87);
-    display: block;
-    font-size: 14px;
-    font-weight: 500;
-    height: 48px;
-    line-height: 48px;
-    padding: 0 32px;
-}
-
-.sidenav li>a:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.sidenav li>a.btn,
-.sidenav li>a.btn-large,
-.sidenav li>a.btn-small,
-.sidenav li>a.btn-large,
-.sidenav li>a.btn-flat,
-.sidenav li>a.btn-floating {
-    margin: 10px 15px;
-}
-
-.sidenav li>a.btn,
-.sidenav li>a.btn-large,
-.sidenav li>a.btn-small,
-.sidenav li>a.btn-large,
-.sidenav li>a.btn-floating {
-    color: #fff;
-}
-
-.sidenav li>a.btn-flat {
-    color: #343434;
-}
-
-.sidenav li>a.btn:hover,
-.sidenav li>a.btn-large:hover,
-.sidenav li>a.btn-small:hover,
-.sidenav li>a.btn-large:hover {
-    background-color: #2bbbad;
-}
-
-.sidenav li>a.btn-floating:hover {
-    background-color: #26a69a;
-}
-
-.sidenav li>a>i,
-.sidenav li>a>[class^="mdi-"],
-.sidenav li>a li>a>[class*="mdi-"],
-.sidenav li>a>i.material-icons {
-    float: left;
-    height: 48px;
-    line-height: 48px;
-    margin: 0 32px 0 0;
-    width: 24px;
-    color: rgba(0, 0, 0, 0.54);
-}
-
-.sidenav .divider {
-    margin: 8px 0 0 0;
-}
-
-.sidenav .subheader {
-    cursor: initial;
-    pointer-events: none;
-    color: rgba(0, 0, 0, 0.54);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 48px;
-}
-
-.sidenav .subheader:hover {
-    background-color: transparent;
-}
-
-.sidenav .user-view {
-    position: relative;
-    padding: 32px 32px 0;
-    margin-bottom: 8px;
-}
-
-.sidenav .user-view>a {
-    height: auto;
-    padding: 0;
-}
-
-.sidenav .user-view>a:hover {
-    background-color: transparent;
-}
-
-.sidenav .user-view .background {
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-}
-
-.sidenav .user-view .circle,
-.sidenav .user-view .name,
-.sidenav .user-view .email {
-    display: block;
-}
-
-.sidenav .user-view .circle {
-    height: 64px;
-    width: 64px;
-}
-
-.sidenav .user-view .name,
-.sidenav .user-view .email {
-    font-size: 14px;
-    line-height: 24px;
-}
-
-.sidenav .user-view .name {
-    margin-top: 16px;
-    font-weight: 500;
-}
-
-.sidenav .user-view .email {
-    padding-bottom: 16px;
-    font-weight: 400;
-}
-
-.sidenav.sidenav-fixed {
-    left: 0;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    position: fixed;
-}
-
-.sidenav.sidenav-fixed.right-aligned {
-    right: 0;
-    left: auto;
-}
-
-
-
-.sidenav .collapsible-body>ul:not(.collapsible)>li.active,
-.sidenav.sidenav-fixed .collapsible-body>ul:not(.collapsible)>li.active {
-    background-color: #ee6e73;
-}
-
-.sidenav .collapsible-body>ul:not(.collapsible)>li.active a,
-.sidenav.sidenav-fixed .collapsible-body>ul:not(.collapsible)>li.active a {
-    color: #fff;
-}
-
-.sidenav .collapsible-body {
-    padding: 0;
-}
-
-.sidenav-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    opacity: 0;
-    height: 120vh;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 997;
-    display: none;
-}
-
-/* -- modal -- */
-.z-depth-5, .modal {
-    -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-            box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-  }
-
-  .modal {
-    display: none;
-    position: fixed;
-    left: 0;
-    right: 0;
-    background-color: #fafafa;
-    padding: 0;
-    max-height: 70%;
-    width: 55%;
-    margin: auto;
-    overflow-y: auto;
-    border-radius: 2px;
-    will-change: top, opacity;
-  }
-  
-  .modal:focus {
-    outline: none;
-  }
-  
-  @media only screen and (max-width: 992px) {
-    .modal {
-      width: 80%;
-    }
-  }
-  
-  .modal h1, .modal h2, .modal h3, .modal h4 {
-    margin-top: 0;
-  }
-  
-  .modal .modal-content {
-    padding: 24px;
-  }
-  
-  .modal .modal-close {
-    cursor: pointer;
-  }
-  
-  .modal .modal-footer {
-    border-radius: 0 0 2px 2px;
-    background-color: #fafafa;
-    padding: 4px 6px;
-    height: 56px;
-    width: 100%;
-    text-align: right;
-  }
-  
-  .modal .modal-footer .btn, .modal .modal-footer .btn-large, .modal .modal-footer .btn-small, .modal .modal-footer .btn-flat {
-    margin: 6px 0;
-  }
-  
-  .modal-overlay {
-    position: fixed;
-    z-index: 999;
-    top: -25%;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 125%;
-    width: 100%;
-    background: #000;
-    display: none;
-    will-change: opacity;
-  }
-  
-  .modal.modal-fixed-footer {
-    padding: 0;
-    height: 70%;
-  }
-  
-  .modal.modal-fixed-footer .modal-content {
-    position: absolute;
-    height: calc(100% - 56px);
-    max-height: 100%;
-    width: 100%;
-    overflow-y: auto;
-  }
-  
-  .modal.modal-fixed-footer .modal-footer {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    position: absolute;
-    bottom: 0;
-  }
-  
-  .modal.bottom-sheet {
-    top: auto;
-    bottom: -100%;
-    margin: 0;
-    width: 100%;
-    max-height: 45%;
-    border-radius: 0;
-    will-change: bottom, opacity;
-  }
