--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ body {
 
 .header {
     min-height: 740px;
-    background-image: url(/img/Rectangle.jpg);
+    background-image: url(../img/Rectangle.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
